# SimpleGame

./: .gitignore
client/: CMakeLists.txt  client.cc
server/: CMakeLists.txt  server.cc
shared/: constants.h
static/: index.html  style.css
